apply plugin: 'java'

group = 'hocon'
version = '0.0.1'
archivesBaseName = "Hocon"

sourceCompatibility = targetCompatibility = 1.8
compileJava {
    sourceCompatibility = targetCompatibility = 1.8
}

repositories {
    jcenter()
    maven {
        name = 'sponge'
        url = 'https://repo.spongepowered.org/maven'
    }
}

dependencies {
    //compile 'com.google.guava:guava:21.0'
    //compile group: 'com.google.guava', name: 'guava', version: '26.0-jre'
    compile 'com.google.code.findbugs:jsr305:3.0.2'
}
